k3s/test-k3s-traefik-contif.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-test-registry
  labels:
    app: whoami-test-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami-test-registry
  template:
    metadata:
      labels:
        app: whoami-test-registry
    spec:
      containers:
      - name: whoami-test-registry
        image: localregistry:5000/containous/whoami
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  labels:
    app: whoami-test-registry
spec:
  selector:
    app: whoami-test-registry
  ports:
  - name: whoami-test-registry
    port: 80
    protocol: TCP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: whoami
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - http:
      paths:
      - path: /whoami
        backend:
          serviceName: whoami-service
          servicePort: 80
